style.css
/* ... */
#lightbox {
  position: fixed;
  z-index: 1000;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0, .9);
  display: none;
}

#lightbox.active {
  display: flex;
  justify-content: center;
  align-items: center;
}


@media (min-width: 600px) {
  .portfolio {
    grid-template-areas:
    ". jamaica hilton hotels . "
    ". dylans dubdub hilton-ww .";
    row-gap: 3em;
  }

  .jamaica {
    grid-area: jamaica;
  }
  
  .hilton {
    grid-area: hilton;
  }
  .hotels {
    grid-area: hotels;
  }
  .dylans {
    grid-area: dylans;
  }
  .dubdub {
    grid-area: dubdub;
  }
  .hilton-ww {
    grid-area: hilton-ww;
  }
  
}


/* ==================
    template page
===================== */


.main-template {
  padding: 4em 0;
}


.contact-form {
  grid-column: 2;
  padding: 2em;
  display: flex;
  flex-direction: column;
}

input, textarea{
  transform: scale(1);
  transition: transform 250ms;
}

input:focus, textarea:focus{
  transform: scale(1.05);
}

label {
  justify-self: end;
  margin-right: 2em;
}

.form {
  display: grid;
  padding: 1em;
}

 
 .form > input textarea {
   height: 100%;
   min-width: 60%;
   margin-top: 2em;
   resize:none;
 }

 .form > button {
   margin-top: 2em;
   justify-self: center;
   width:40%;

 }
 label {
   justify-self: end;
   margin-right: 2em;
   align-self: center;
 }


@media (min-width: 600px) {
  .contact-form {
    grid-column: 2/5;
  }
  .secondary-text {
   padding: 2em;
  }

  .form {
    grid-column: 2;
     grid-template-columns:150px 1fr;
     width: 90%;
    padding: 2em;
     justify-self: end;
     display: flex;
     flex-direction: column;
   } 
}

@media (min-width: 800px) {
  .contact-form {
    display: grid;
    grid-template-columns: 400px 1fr;
  }
}


/* ==================
    form
===================== */



label {
  font-weight: 700;
}

input,
textarea {
  margin-bottom: 0.75em;
  padding: 0.4em;
  font-family: inherit;
}

textarea {
  resize: none;
  height: 100px;
}



.title-section {
  background-color: var(--secondary-color);
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow-y: hidden;
  padding-top: 1em;
}

.title-section.even{
  background-color: var(--primary-color);
}

.title-logo {
  font-family: 'Bebas Neue', cursive;
  overflow-y: hidden;
  font-size: 5em;
  color:var(--dark-color);
  display:inline-block;
  border-bottom: 10px solid black;
  letter-spacing: 8px;
  line-height: normal;
}

.display-none {
  display: none;
}

@media (max-width: 450px) {
  .title-logo {
    font-size: 3.5em;
  }
}

